# surreal-db-python

./: Makefile  README.md  pyproject.toml  setup.py
surreal/: __init__.py  client.py  exceptions.py  surreal_compiled.c  surreal_compiled.py
surreal/utils/: event_listener.py  wrap_request.py
test/: test_surreal.py
