[tool.poetry]
name = "surreal-db-python"
version = "1.0.2"
description = "A surrealdb API wrapper (websocket coming soon)"
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/timelessnesses/surreal-db-python"
packages = [
    { include = "surreal" }
]


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
requests = "^2.28.1"
orjson = "^3.8.0"
wheel = "^0.37.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
black = "^22.8.0"
autoflake = "^1.5.3"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
dotenv = "^0.0.5"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core","setuptools","wheel"]
build-backend = "poetry.core.masonry.api"
